javascript functionality updated

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     
    
     
-    <form name="quiz" id="quiz">
+    <form name="myQuiz" id="myQuiz">
       <div>
         <div id="q1">
             <p>1. What is the recommended(FDA) time to eat lunch? (1pt)</p>
