final commit for project presentation. Timer to be worked on at later date

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <p><input type="radio" name="question10" value="McWay Falls">E. McWay Falls</p>
         </div> 
       </div>
-        <!--9. when user clicks on finish, keep selections selected, update grade box, maybe display all done,-->
+        <!--9. when user clicks on finish/submit, keep selections selected, update grade box, display modal woth number correct and percentage-->
     <!--Restart button shoudl clear slected answers and gradebox and reset timer to 3 minutes(180 seconds)-->
         <div id="submit">
             <input  type="button" value="submit" id="button" onclick="check()">   
