final commit for presentation

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
 
     </form>
-    
+    <!-- stretch call of restart button and timer.  Currently screen clears upon reload -->
     <!-- <div class="restart">
            <button name="restart" >RESTART</button>    
         </div> -->
