logic change to correctly calculate score

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
         <div id="q4">
             <p>4. What food is good for healthy hair(protein)?(FDA) (1pt)</p>
             <!-- allow user to select an anser from list -->
-            <p><input type="radio" name="question4" value="carrots">A. Carrots </p>
-            <p><input type="radio" name="question4" value="tomatoes">B. Tomatoes </p>
-            <p><input type="radio" name="question4" value="legumes">C. Legumes </p><!--answer>-->
-            <p><input type="radio" name="question4" value="apples">D. Apples  </p>
-            <p><input type="radio" name="question4" value="meat">E. Meat </p>
+            <p><input type="radio" name="question4" value="Carrots">A. Carrots</p>
+            <p><input type="radio" name="question4" value="Tomatoes">B. Tomatoes</p>
+            <p><input type="radio" name="question4" value="Legumes">C. Legumes</p><!--answer>-->
+            <p><input type="radio" name="question4" value="Apples">D. Apples</p>
+            <p><input type="radio" name="question4" value="Meat">E. Meat</p>
         </div>
         <br>
         <div id="q5">
             <p>5. What is the best time of the year to plant flowers in Georgia?(Farmers Almanac-2020) (1pt)</p>
             <!-- allow user to select an anser from list -->
-            <p><input type="radio" name="question5" value="Fall">A. Fall </p>
-            <p><input type="radio" name="question5" value="Winter">B. Winter </p>
-            <p><input type="radio" name="question5" value="Spring">C. Spring </p><!--answer-->
+            <p><input type="radio" name="question5" value="Fall">A. Fall</p>
+            <p><input type="radio" name="question5" value="Winter">B. Winter</p>
+            <p><input type="radio" name="question5" value="Spring">C. Spring</p><!--answer-->
             <p><input type="radio" name="question5" value="Summer">D. Summer</p>
             <p><input type="radio" name="question5" value="Anytime">E. Anytime</p>
         </div>
