--- a/welcome.html
+++ b/welcome.html
@@ -16,8 +16,8 @@
         </div>
         <div class="instructions">
             <p>
-                <center>This quiz is for the faint of heart. It consist of 10 very trying questions that will have you
-                    thinking....Why didn't I know that!!<br>
+                <center>This quiz is <strong>NOT</strong>for the faint of heart. It consist of 10 very trying questions that will have you
+                    thinking....Why didn't I know that!!!!<br>
                     A few things to keep in mind... This quiz has 10 questions and you have 2 minutes to complete. Your
                     score will be displayed as well as the<br>
                     number of correct answers at end of test. Ok. That it! Hit that start button and begin. YOU GOT
