changed quizz title to all upper cass

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- 0.Heading for Quiz -->
 
-    <h1> No nonsense aptitude quiz</h1>
+    <h1> TWANS'S FACT CHECK QUIZZ</h1>
     <br>
   
     <div id="instructions">
