--- a/welcome.html
+++ b/welcome.html
@@ -12,7 +12,7 @@
 <body>
     <div class="homepage">
         <div class="header1">
-            <h1>Twans FACT CHECK Quizz </h1>
+            <h1>TWAN'S FACT CHECK QUIZZ </h1>
         </div>
         <div class="instructions">
             <h4>
