updated color on Semper Fi tag

--- a/shoutout.html
+++ b/shoutout.html
@@ -24,7 +24,7 @@
             <p>&nbspFor your dedication and commitment to share!</p>
             <center><h3><strong><u>CLASSMATES</u></strong></h3></center>
             <p>For all the encouragement, the comradarie and jokes</p>
-            <center><h4>SEMPER FI!!!</h4></center>
+            <center><u><h4 style="color:red;">SEMPER FI!!!</h4></u></center>
         </div>
          <a href="/quiz1/welcome.html">HOME</a>
     </div>
